--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,22 @@
             android:name=".uicomponents.activities.landing.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".uicomponents.base.BaseActivity" />
+        <activity
+            android:name=".uicomponents.activities.makenote.MakeNoteActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".uicomponents.activities.splash.SplashActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".uicomponents.base.BaseActivity" />
-        <activity
-            android:name=".uicomponents.activities.makenote.MakeNoteActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            ></activity>
     </application>
 
 </manifest>
