--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
     //Lifecycle ViewModel and LiveData
-    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     //Room
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     //Anko
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
