--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ buildscript {
     ext.room_version = '2.1.0'
     ext.lifecycle_version = '2.0.0'
     ext.build_tools_version = '3.4.0'
+    ext.andx_app_appcompat = '1.1.0-beta01'
+    ext.andx_constraint = '2.0.0-beta1'
+    ext.material_design = '1.1.0-alpha07'
+    ext.andx_legacy_support = '1.0.0'
+    ext.anko_version = '0.10.4'
 
     repositories {
         google()
