Edit functionality modified

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         >
         <activity android:name=".uicomponents.activities.viewnote.ViewNote"
             android:theme="@style/AppTheme.NoActionBar"
-            ></activity>
+            />
         <activity
             android:name=".uicomponents.activities.landing.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".uicomponents.base.BaseActivity" />
         <activity
             android:name=".uicomponents.activities.makenote.MakeNoteActivity"
