--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,13 @@ dependencies {
     //Anko
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$couroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$couroutines_version"
+
+    //RxKotlin
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid"
+
+
 }
