--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:name=".uicomponents.activities.makenote.MakeNoteActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".uicomponents.activities.enterpin.PinActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".uicomponents.activities.settings.SettingsActivity"
