--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
-    ext.room_version = '2.1.0'
-    ext.lifecycle_version = '2.0.0'
-    ext.build_tools_version = '3.4.2'
-    ext.andx_app_appcompat = '1.1.0-rc01'
-    ext.andx_constraint = '2.0.0-beta2'
-    ext.material_design = '1.1.0-alpha09'
-    ext.andx_legacy_support = '1.0.0'
-    ext.anko_version = '0.10.4'
-    ext.couroutines_version = '1.3.0-M2'
-    ext.rxKotlin = '2.4.0'
-    ext.rxAndroid = '2.0.1'
+    ext {
+        kotlin_version = '1.3.41'
+        room_version = '2.1.0'
+        lifecycle_version = '2.0.0'
+        build_tools_version = '3.5.0'
+        andx_app_appcompat = '1.1.0-rc01'
+        andx_constraint = '2.0.0-beta2'
+        material_design = '1.1.0-alpha09'
+        andx_legacy_support = '1.0.0'
+        anko_version = '0.10.4'
+        couroutines_version = '1.3.0-M2'
+        rxKotlin = '2.4.0'
+        rxAndroid = '2.0.1'
+        junit_version = '4.12'
+    }
+
 
     repositories {
         google()
