--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,8 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0-beta01'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
 
+    //Gson
+    implementation "com.google.code.gson:gson:$gson_version"
+
 
 }
