--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         rxKotlin = '2.4.0'
         rxAndroid = '2.1.0'
         junit_version = '4.12'
+        gson_version = '2.8.5'
     }
 
 
