--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.noteapp"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -52,6 +52,9 @@ dependencies {
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$couroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$couroutines_version"
+
+    //LeakCanary
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
 
     //RxKotlin
     implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin"
