--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         couroutines_version = '1.3.0-M2'
         rxKotlin = '2.4.0'
         rxAndroid = '2.1.0'
+        leakCanary = '2.0-beta-3'
         junit_version = '4.12'
     }
 
